# intellij-haskell-exe-name-example

./: stack.yaml
example/: example.cabal
